--- a/app/globals.css
+++ b/app/globals.css
@@ -54,6 +54,9 @@
   --radius-md: calc(var(--radius) - 2px);
   --radius-lg: var(--radius);
   --radius-xl: calc(var(--radius) + 4px);
+  --shadow-1: 0px 10px 30px 0px rgba(66, 71, 97, 0.1);
+  --shadow-2: 0px 8px 30px 0px rgba(65, 89, 214, 0.3);
+  --shadow-3: 0px 8px 30px 0px rgba(65, 89, 214, 0.1);
 }
 
 .dark {
@@ -139,6 +142,9 @@
   --radius-md: calc(var(--radius) - 2px);
   --radius-lg: var(--radius);
   --radius-xl: calc(var(--radius) + 4px);
+  --shadow-1: 0px 10px 30px 0px rgba(66, 71, 97, 0.1);
+  --shadow-2: 0px 8px 30px 0px rgba(65, 89, 214, 0.3);
+  --shadow-3: 0px 8px 30px 0px rgba(65, 89, 214, 0.1);
 }
 
 /* = TYPOGRAPHY */
@@ -238,7 +244,7 @@
   ring-color: transparent !important;
 }
 
-.input {
+.form-input {
   border: none;
   box-shadow: none;
   padding: 0;
@@ -257,15 +263,15 @@
   border: 1px solid var(--color-light-300);
   padding-left: 1rem;
   padding-right: 1rem;
-  box-shadow: var(--tw-shadow-drop-1);
+  box-shadow: var(--shadow-1);
 }
 
 .form-label {
   color: var(--color-light-100);
   padding-top: 0.5rem;
-  font-size: 0.875rem;
+  font-size: 1rem;
   line-height: 1.25rem;
-  font-weight: 400;
+  font-weight: 600;
   width: 100%;
 }
 
@@ -329,7 +335,7 @@
   font-size: 2.5rem;
   font-weight: 500;
   border-radius: 0.75rem;
-  box-shadow: var(--tw-shadow-drop-1);
+  box-shadow: var(--shadow-1);
   border: 2px solid var(--color-light-300);
   color: var(--color-brand-100);
   display: flex;
@@ -611,7 +617,7 @@
   border-width: 1px;
   padding-left: 1rem;
   padding-right: 1rem;
-  box-shadow: var(--tw-shadow-drop-1);
+  box-shadow: var(--shadow-1);
   outline: none;
 }
 
@@ -642,7 +648,7 @@
   width: 100%;
   flex: 1;
   background-color: var(--color-brand);
-  color: var(--primary-foreground);
+  color: var(--color-primary-foreground);
   border-radius: 9999px;
   transition: all 0.3s;
   font-size: 0.875rem;
@@ -698,7 +704,7 @@
   border-width: 1px;
   padding-left: 1rem;
   padding-right: 1rem;
-  box-shadow: var(--tw-shadow-drop-1);
+  box-shadow: var(--shadow-1);
   outline: none;
 }
 
@@ -753,8 +759,8 @@
 
 .form-submit-button {
   height: 66px;
-  background-color: var(--primary);
-  color: var(--primary-foreground);
+  background-color: var(--color-brand);
+  color: var(--color-primary-foreground);
   border-radius: 9999px;
   transition: all 0.3s;
   font-size: 0.875rem;
@@ -763,7 +769,7 @@
 }
 
 .form-submit-button:hover {
-  background-color: var(--primary) / 0.85;
+  background-color: var(--color-primary);
 }
 
 .error-message {
@@ -920,8 +926,8 @@
 
 /* FileUploader */
 .uploader-button {
-  background-color: var(--primary);
-  color: var(--primary-foreground);
+  background-color: var(--color-primary);
+  color: var(--color-primary-foreground);
   border-radius: 9999px;
   transition: all 0.3s;
   font-size: 0.875rem;
@@ -931,11 +937,11 @@
   gap: 0.5rem;
   padding-left: 2.5rem;
   padding-right: 2.5rem;
-  box-shadow: var(--tw-shadow-drop-1);
+  box-shadow: var(--shadow-1);
 }
 
 .uploader-button:hover {
-  background-color: var(--primary) / 0.85;
+  background-color: var(--color-primary) / 0.85;
 }
 
 .uploader-preview-list {
@@ -952,7 +958,7 @@
   border-radius: 1.25rem;
   background-color: white;
   padding: 1.75rem;
-  box-shadow: var(--tw-shadow-drop-3);
+  box-shadow: var(--shadow-3);
 }
 
 .uploader-preview-item {
@@ -962,7 +968,7 @@
   gap: 0.75rem;
   border-radius: 0.75rem;
   padding: 0.75rem;
-  box-shadow: var(--tw-shadow-drop-3);
+  box-shadow: var(--shadow-3);
 }
 
 .preview-item-name {
@@ -1170,7 +1176,7 @@
   border-radius: 9999px;
   padding-left: 1rem;
   padding-right: 1rem;
-  box-shadow: var(--tw-shadow-drop-3);
+  box-shadow: var(--shadow-3);
 }
 .search-input {
   /* @apply body-2 no-focus placeholder:body-1; */
@@ -1269,7 +1275,7 @@
 .active {
   background-color: var(--color-brand);
   color: white;
-  box-shadow: var(--tw-shadow-drop-2);
+  /* box-shadow: var(--shadow-drop-2); */
 }
 
 /* Sort */
@@ -1280,13 +1286,13 @@
   border-radius: 0.5rem;
   border-color: transparent;
   background-color: white;
-  box-shadow: var(--tw-shadow-sm);
+  box-shadow: var(--shadow-sm);
   @media (min-width: 640px) {
     width: 210px;
   }
 }
 .sort-select-content {
-  box-shadow: var(--tw-shadow-drop-3);
+  box-shadow: var(--shadow-3);
 }
 
 /* Thumbnail */
