--- a/app/globals.css
+++ b/app/globals.css
@@ -1063,12 +1063,12 @@
   color: var(--color-light-100);
 }
 
-@media (min-width: 640px) {
+/* @media (min-width: 640px) {
   .header-user {
     justify-content: center;
     background-color: var(--color-brand) / 0.1;
   }
-}
+} */
 
 @media (min-width: 1024px) {
   .header-user {
@@ -1077,7 +1077,7 @@
   }
 }
 
-.header-user-avatar {
+.user-avatar {
   aspect-ratio: 1 / 1;
   width: 2.5rem;
   border-radius: 9999px;
@@ -1128,15 +1128,15 @@
   padding-left: 1.5rem;
   padding-right: 1.5rem;
   border-radius: 9999px;
-  background-color: var(--color-brand) / 0.1;
+  /* background-color: var(--color-brand) / 0.1; */
   color: var(--color-brand);
   box-shadow: none;
   transition: all 0.3s;
 }
 
-.mobile-sign-out-button:hover {
+/* .mobile-sign-out-button:hover {
   background-color: var(--color-brand) / 0.2;
-}
+} */
 
 /* OTP Modal */
 .otp-close-button {
@@ -1260,12 +1260,6 @@
     justify-content: flex-start;
     padding: 0.75rem;
   }
-}
-.sidebar-user-avatar {
-  aspect-ratio: 1 / 1;
-  width: 2.5rem;
-  border-radius: 9999px;
-  object-fit: cover;
 }
 .active {
   background-color: var(--color-brand);
