--- a/app/globals.css
+++ b/app/globals.css
@@ -925,7 +925,7 @@
 
 /* FileUploader */
 .uploader-button {
-  background-color: var(--color-primary);
+  background-color: var(--color-brand-100);
   color: var(--color-primary-foreground);
   border-radius: 9999px;
   transition: all 0.3s;
@@ -939,9 +939,9 @@
   box-shadow: var(--shadow-1);
 }
 
-.uploader-button:hover {
+/* .uploader-button:hover {
   background-color: var(--color-primary) / 0.85;
-}
+} */
 
 .uploader-preview-list {
   position: fixed;
@@ -974,8 +974,9 @@
   font-size: 0.875rem;
   line-height: 1.25rem;
   font-weight: 600;
-  margin-bottom: 0.5rem;
+  margin-bottom: 0.1rem;
   display: -webkit-box;
+  line-clamp: 1;
   -webkit-line-clamp: 1;
   -webkit-box-orient: vertical;
   overflow: hidden;
