--- a/app/globals.css
+++ b/app/globals.css
@@ -3,8 +3,9 @@
 @custom-variant dark (&:is(.dark *));
 
 :root {
-  --color-brand: #fa7275;
-  --color-brand-100: #ea6365;
+  --color-brand: #3F6C8E;
+  --color-brand-50: #6E94B2;
+  --color-brand-100: #345A76;
   --color-red: #ff7474;
   --color-error: #b80000;
   --color-green: #3dd9b3;
@@ -99,8 +100,9 @@
 }
 
 @theme {
-  --color-brand: #fa7275;
-  --color-brand-100: #ea6365;
+  --color-brand: #3F6C8E;
+  --color-brand-50: #6E94B2;
+  --color-brand-100: #345A76;
   --color-red: #ff7474;
   --color-error: #b80000;
   --color-green: #3dd9b3;
